stop horizontal scroll small viewport

--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -6,7 +6,7 @@
   text-align: center;
   padding: 3.5em 1em 0 1em;
   background: $altBgColor;
-  // width: 100%;
+  width: 100%;
   h2 {
     text-transform: uppercase;
     letter-spacing: 0.1em;
@@ -14,6 +14,10 @@
     font-size: 2em;
     color: $sectionHeaderTextColor;
   }
+  margin: 0 auto;
+}
+
+.innerContainer {
   margin: 0 auto;
 }
 
